[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bord3r"
dynamic = ["version"]
description = "A simple image bordering tool."
authors = [
  { name = "Sped0n<github.com/Sped0n>", email = "realsped0n@outlook.com" },
]
requires-python = ">=3.11.0"
dependencies = ["Pillow==10.0.0", "PyExifTool==0.5.5", "tqdm==4.65.0"]
